visual changes & fixed header on mobile devices

--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Lexend:wght@100..900&display=swap');
 :root {
     --bcsecond: #d9f520;
     --backgrd: #221f1f;
@@ -9,12 +11,17 @@
     display: block;
 }
 
+
+
 html {
     background-color: var(--backgrd);
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
     color: white;
 }
 
@@ -23,6 +30,11 @@ html {
     z-index: -1;
     background-color: #2e2c2c;
     width: 100%;
+}
+
+.cardtitle{
+    text-align: center;
+    font-size: medium;
 }
 
 .main {
@@ -65,10 +77,10 @@ html {
 }
 
 .butshare {
-    background-color: rgb(112, 0, 198);
+    background-color: #021526;
     color: #ffffff;
     border: 2px;
-    border-color: #d9f520;
+    border-color: #03346E;
     border-style: dashed;
     align-items: center;
     justify-content: center;
@@ -256,7 +268,7 @@ li,
 a {
     padding-left: 15px;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lexend', sans-serif;
     font-size: 10px;
     color: white;
     text-decoration: none;
@@ -288,7 +300,7 @@ footer {
 }
 
 .social-icons a :hover {
-    color: #d9f520;
+    color: rgb(112, 0, 198);
 }
 
 .foot {
@@ -436,7 +448,7 @@ footer {
 
 .resultlist:hover {
     cursor: pointer;
-    color: #d9f520;
+    color: #b8b8b8;
     background-color: rgb(112, 0, 198);
 }
 
@@ -477,7 +489,7 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lexend', sans-serif;
     color: white;
 }
 
@@ -489,17 +501,14 @@ body {
     width: 200px;
     font-size: 20px;
     cursor: pointer;
-    overflow: hidden;
     text-overflow: clip;
     /* optional: adds ellipsis for hidden text */
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
 }
 
 .showlist:hover {
-    color: #d9f520;
+    color: #03346E;
     box-shadow: #d9f520;
 }
 
@@ -509,6 +518,7 @@ body {
 
 .imgshow {
     width: 160px;
+    overflow: hidden;
     height: 230px;
     border: 1;
     border-radius: 5px;
@@ -576,7 +586,12 @@ body {
 }
 
 .watchgridshowlist:hover {
-    color: #d9f520;
+    color: rgb(112, 0, 198);
+}
+.innerd{
+    display: flex;
+    overflow: scroll;
+    width: 100%;
 }
 
 .gridshowlist {
@@ -1104,7 +1119,7 @@ art-bottom .art-progress {
 .relatedanimes {
     display: grid;
     grid-gap: 0px;
-    grid-template-columns: repeat(2, 3fr);
+    grid-template-columns: repeat(4, 3fr);
     margin-top: 10px;
     border: 1;
     border-radius: 10px;
@@ -1324,6 +1339,9 @@ art-bottom .art-progress {
     position:relative;
     border-radius: 5px;
 }
+.card{
+    overflow: hidden;
+}
 
 .banner{
     position: absolute;
@@ -1534,6 +1552,7 @@ art-bottom .art-progress {
     height: 1rem;
     background: white;
 }
+
 
 .imgslide {
     width: 100%;
@@ -1906,8 +1925,8 @@ art-bottom .art-progress {
 /* header css */
 
 :root {
-    --backgrd: #221f1f;
-    --bcsecond: #1412087f;
+    --backgrd: #000000;
+    --bcsecond: #1616167f;
     --bctext : transparent;
 }
 
@@ -1946,6 +1965,16 @@ art-bottom .art-progress {
     max-width: 100%;
 }
 
+.swiper-slide3 {
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* Ensure each slide takes 100% of the container width */
+    max-width: 100%;
+}
+
 /* Navigation Links Styles */
 li,
 a,
@@ -1953,7 +1982,7 @@ ul {
     background-color: var(--bctext);
     align-items: center;
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lexend', sans-serif;
     justify-content: space-between;
     font-size: 15px;
     font-weight: 500;
@@ -2036,7 +2065,7 @@ ul {
 }
 
 .searchbarmob {
-
+    display: none;
 }
 
 .logo {
@@ -2074,6 +2103,7 @@ ul {
     }
 
     .searchbar {
+        display: none;
     
     }
 
